--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,14 @@
 <head>
-        <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-      <link rel="shortcut icon" href="/assets/images/kids-favicon.png">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
+      
+      <link rel="shortcut icon" href="assets/images/kids-favicon.png">
       <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
       <meta name="description" content="{% if page.description %}{{ page.description}}{% else %}{{ site.description }}{% endif %}">
       <!--Import css files-->
-      <link rel="stylesheet" href="/assets/css/main.css">
-      <link rel="stylesheet" href="/assets/css/materialize.css">
-      <link rel="stylesheet" href="/assets/css/styles.css">
+      <link rel="stylesheet" href="assets/css/main.css">
+      <link rel="stylesheet" href="assets/css/materialize.css">
+      <link rel="stylesheet" href="assets/css/styles.css">
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
